src/horseir/v2/tests/pass/t23.hir
// 23 : var decl

module var_decl{
    def main(){
        var x:i32;
        var y, z:f32;
    }
}

